--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,18 +25,19 @@ dependencies:
     sdk: flutter
 
 
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.0
+  freezed_annotation:  ^0.11.0
+  sqflite: ^1.3.0
+  simple_logger: ^1.7.0
+  fluttertoast: 4.0.1
+  percent_indicator: ^2.1.5
+  flutter_staggered_grid_view: ^0.3.0
+  uuid: 2.2.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
-# For information on the generic Dart part of this file, see the
-# following page: https://dart.dev/tools/pub/pubspec
-
-# The following section is specific to Flutter.
 flutter:
 
   # The following line ensures that the Material Icons font is
