--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,11 +33,13 @@ dependencies:
   percent_indicator: ^2.1.5
   flutter_staggered_grid_view: ^0.3.0
   uuid: 2.2.0
+  json_serializable: ^3.3.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-
+  build_runner: ^1.10.0
+  freezed: ^0.11.2
 flutter:
 
   # The following line ensures that the Material Icons font is
