--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,7 +24,6 @@ dependencies:
   flutter:
     sdk: flutter
 
-
   cupertino_icons: ^1.0.0
   freezed_annotation:  ^0.11.0
   sqflite: ^1.3.0
@@ -34,6 +33,7 @@ dependencies:
   flutter_staggered_grid_view: ^0.3.0
   uuid: 2.2.0
   json_serializable: ^3.3.0
+  path: 1.8.0-nullsafety.1
 
 dev_dependencies:
   flutter_test:
