--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,9 +31,11 @@ dependencies:
   fluttertoast: 4.0.1
   percent_indicator: ^2.1.5
   flutter_staggered_grid_view: ^0.3.0
+  provider: ^4.1.3
   uuid: 2.2.0
   json_serializable: ^3.3.0
   path: 1.8.0-nullsafety.1
+  rxdart: ^0.24.1
 
 dev_dependencies:
   flutter_test:
