--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   json_serializable: ^3.3.0
   path: 1.8.0-nullsafety.1
   rxdart: ^0.24.1
+  get_it: ^4.0.2
 
 dev_dependencies:
   flutter_test:
