--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   path: 1.8.0-nullsafety.1
   rxdart: ^0.24.1
   get_it: ^4.0.2
+  implicitly_animated_reorderable_list: ^0.2.3
+  flutter_keyboard_visibility: ^3.2.1
 
 dev_dependencies:
   flutter_test:
