--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   get_it: ^4.0.2
   implicitly_animated_reorderable_list: ^0.2.3
   flutter_keyboard_visibility: ^3.2.1
+  hexcolor: ^1.0.6
 
 dev_dependencies:
   flutter_test:
