--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,8 +1,13 @@
 buildscript {
     ext.kotlin_version = '1.3.50'
     repositories {
-        google()
-        jcenter()
+        //google()
+        //jcenter()
+
+        maven { url 'https://plugins.gradle.org/m2/' }
+        maven { url 'http://maven.aliyun.com/nexus/content/repositories/google' }
+        maven { url 'http://maven.aliyun.com/nexus/content/groups/public/' } 
+        maven { url 'http://maven.aliyun.com/nexus/content/repositories/jcenter'}
     }
 
     dependencies {
@@ -13,8 +18,11 @@ buildscript {
 
 allprojects {
     repositories {
-        google()
-        jcenter()
+
+        maven { url 'https://plugins.gradle.org/m2/' }
+        maven { url 'http://maven.aliyun.com/nexus/content/repositories/google' }
+        maven { url 'http://maven.aliyun.com/nexus/content/groups/public/' } 
+        maven { url 'http://maven.aliyun.com/nexus/content/repositories/jcenter'} 
     }
 }
 
