--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,28 +1,20 @@
 buildscript {
-    ext.kotlin_version = '1.3.50'
+    ext.kotlin_version = '1.6.10'
     repositories {
-        //google()
-        //jcenter()
-
-        maven { url 'https://plugins.gradle.org/m2/' }
-        maven { url 'http://maven.aliyun.com/nexus/content/repositories/google' }
-        maven { url 'http://maven.aliyun.com/nexus/content/groups/public/' } 
-        maven { url 'http://maven.aliyun.com/nexus/content/repositories/jcenter'}
+        google()
+        mavenCentral()
     }
 
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.5.0'
+        classpath 'com.android.tools.build:gradle:7.1.2'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
     }
 }
 
 allprojects {
     repositories {
-
-        maven { url 'https://plugins.gradle.org/m2/' }
-        maven { url 'http://maven.aliyun.com/nexus/content/repositories/google' }
-        maven { url 'http://maven.aliyun.com/nexus/content/groups/public/' } 
-        maven { url 'http://maven.aliyun.com/nexus/content/repositories/jcenter'} 
+        google()
+        mavenCentral()
     }
 }
 
