--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,7 +34,7 @@ dependencies:
   provider: ^4.1.3
   uuid: 2.2.0
   json_serializable: ^3.3.0
-  path: 1.8.0-nullsafety.1
+  path: ^1.8.0-nullsafety.1
   rxdart: ^0.24.1
   get_it: ^4.0.2
   implicitly_animated_reorderable_list: ^0.2.3
